# model_criticism_mmd

./: .gitignore  Makefile  README.md  build.py  environment.yml  install_script.py  pyproject.toml  sample.ipynb  setup.py  study-parameter-stability.ipynb
.circleci/: config.yml
.github/workflows/: main.yml
experiment_notes/: feature_dependency.ipynb  permutation-tests-sample-time-at-t.ipynb  permutation-tests-sample-time.ipynb
experiment_notes/dependency of features/: feature_dependency.ipynb
experiment_notes/permutation tests with time-series sample/: Permutation test for time-series data with difference.ipynb  output.xlsx
model_criticism_mmd/: __init__.py  logger_unit.py  models.py
model_criticism_mmd-latest/: PKG-INFO  README.md  pyproject.toml  setup.py
model_criticism_mmd-latest/model_criticism_mmd/: __init__.py  exceptions.py
model_criticism_mmd-latest/model_criticism_mmd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
model_criticism_mmd-latest/model_criticism_mmd/backends/: backend_theano.py  backend_torch.py
model_criticism_mmd-latest/model_criticism_mmd/backends/kernels_torch/: base.py  matern_kernel.py
model_criticism_mmd-latest/model_criticism_mmd/models/: __init__.py  datasets.py  static.py
model_criticism_mmd-latest/model_criticism_mmd/supports/: __init__.py  distribution_generator.py  evaluate_stats_tests.py  selection_kernels.py
model_criticism_mmd-latest/model_criticism_mmd/supports/metrics/soft_dtw/: _soft_dtw.py
model_criticism_mmd/backends/: backend_theano.py  backend_torch.py  kernels_torch.py
model_criticism_mmd/backends/kernels_torch/: __init__.py  base.py  matern_kernel.py  rbf_kernel.py  time_sequential_kernels.py
model_criticism_mmd/models/: __init__.py  datasets.py  report_generators.py  static.py
model_criticism_mmd/supports/: evaluate_stats_tests.py  mmd_two_sample_test.py  permutation_tests.py  selection_kernels.py  split_data_torch.py
model_criticism_mmd/supports/metrics/soft_dtw/: __init__.py  _soft_dtw.py  _soft_dtw_cuda.py
samples/: distance-softDTW.ipynb  experiments_statistical_cases.py  permutation test.ipynb  sample.ipynb  study-parameter-stability.ipynb  validation of statistical-tests.ipynb
tests/: .gitignore  test_ard_weights.py  test_backend_theano.py  test_backend_torch.py  test_comparison_backend.py  test_two_sample_st-test.py  trial_codes.py
tests/backends/kernels_torch/: test_base.py  test_kernels_torch.py  test_matern_kernel.py  test_time_sequential_kernels.py
tests/backends/supports/: test_permutation_tests.py
tests/backends/supports/metrics/: test_soft_dtw.py
tests/models/: test_datasets.py  test_report_generators.py
tests/resources/: eval_array.npz
tests/supports/: test_evaluate_stats_tests.py  test_permutation_tests.py  test_selection_kernels.py  test_statistical_cases.py
