[tool.poetry]
name = "model_criticism_mmd"
version = "1.1"
description = "A Model criticism on distributions via MMD"
authors = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
maintainers = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
license = "BSD"
readme = "README.md"
documentation = "Suppose that you have 2 datasets(set of samples). You would like to know how close 2 datasets are and also how difference they are. The `model_criticism_mmd` computes a discrepancy between 2 datasets."

[tool.poetry.dependencies]
python = "^3.6"
torch = "*"
torchvision = "*"
torchaudio = "*"
dataclasses = "*"
nptyping = "^1.4.1"
numpy = "*"
gpytorch = "*"
scikit-learn = "*"
lasagne = { version = "*", optional = true }
theano = { version = "^1.0.5", optional = true }
shogun = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-resource-path = "^1.3.0"

[build-system]
requires = ["setuptools", "poetry", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
full = ["lasagne", "theano", "shogun"]

